\name{NEWS}
\title{News for the package \pkg{RESOLVE}}
\encoding{UTF-8}

\section{Changes in Version 1.2.0}{
    \itemize{
        \item Major code refactoring.
        \item Package released in Bioconductor 3.17.
    }
}

\section{Changes in Version 1.0.0}{
    \itemize{
        \item Package released in Bioconductor 3.16.
    }
}

\section{Changes in Version 0.99.5}{
    \itemize{
        \item Package pre-released in October 2022.
    }
}