@@ -28,6 +28,7 @@ import(GenomeInfoDb)
 import(GenomicRanges)
 import(IRanges)
 import(RhpcBLASctl)
+import(cluster)
 import(ggplot2)
 import(glmnet)
 import(gridExtra)
