@@ -67,3 +67,13 @@ NULL
 #' @source List data structure to run examples.
 #' @return List data structure to run examples
 NULL
+
+#' @name sbs_assignments
+#' @title SBS assignments for 560 breast tumors
+#' @description SBS assignments from 560 breast tumors published in Nik-Zainal, Serena, et al. (2016).
+#' @docType data
+#' @usage data(sbs_assignments)
+#' @format SBS assignments inferred by RESOLVE from 560 breast tumors published in Nik-Zainal, Serena, et al. (2016)
+#' @source Nature. 2016 Jun 2;534(7605):47-54 (https://www.nature.com/articles/nature17676).
+#' @return SBS assignments inferred by RESOLVE
+NULL
